# subcorticalparc-smk

./: .gitignore  README.md  README_tractmaps.md  job_tractmaps  pyproject.toml  submit_tractmaps
config/: config.yml  config_ccyoung.yml  hcp7Tparticipants.tsv  hcpparticipants.tsv  hcptestparticipants.tsv  test_camcan.tsv
notebook/: diffparc_viz.ipynb
resources/funcparc/: ciftify_cleaning_wmcsf.json
subcorticalparc_smk/: pipeline_description.json  run.py
subcorticalparc_smk/config/: config.yml  config_feobv_BF.yml
subcorticalparc_smk/resources/: label-paxinos_dseg.tsv
subcorticalparc_smk/workflow/: Snakefile
subcorticalparc_smk/workflow/rules/: common.smk  diffparc.smk  funcparc.smk  hcp_mmp.smk  tractmap.smk
subcorticalparc_smk/workflow/scripts/diffparc/: save_connmap_template_npz.py  spectral_clustering_edit.py
subcorticalparc_smk/workflow/scripts/funcparc/: combine_correlation.py  compute_correlation.py  extract_confounds.py  merge_rois.py  spectral_clustering.py
workflow/: Snakefile
workflow/rules/: common.smk  diffparc.smk  funcparc.smk  hcp_mmp.smk  tractmap.smk
workflow/scripts/: gather_connmap_group.py  save_connmap_template_npz.py  sort_labels_by_ap.sh  spectral_clustering.py
workflow/scripts/funcparc/: combine_correlation.py  compute_correlation.py  extract_confounds.py  merge_rois.py  prep_subcortical.sh
