[tool.poetry]
name = "zonaconn-smk"
version = "0.1.0"
description = "Snakemake workflow to identify connectivity to the zona incerta"
authors = [
    "Ali Khan",
    "Sudesna Chakraborty",
    "Jason Kai",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
snakebids = "^0.7.1"
scikit-learn = "^1.1.3"
nibabel = "^4.0.2"
matplotlib = "^3.6.2"
pandas = "^1.5.1"
nilearn = "^0.9.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
poethepoet = "^0.16.4"
snakefmt = "^0.7.0"
isort = "^5.10.1"

[tool.poetry.group.jupyter.dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
isort = "isort ./subcorticalparc_smk/*.py"
black = "black ./subcorticalparc_smk -l 79"
flake8 = "flake8 subcorticalparc_smk --ignore=E501"
snakefmt = "snakefmt ./subcorticalparc_smk"
quality = ["isort", "black", "flake8", "snakefmt"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 79

[tool.flake8]
ignore = 'E501'

[tool.snakefmt]
include = '\.smk$|^Snakefile'